# egwidget

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  main.rs  parser.rs  t.rs  wui.pest
watch/: Dashboard.toml  MyCard.toml  abc.wui  full.wui_  main.wui  test.wui
