[package]
name = "egwidget"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
notify = "8.0.0"
pest = "2.8.1"
pest_derive = "2.8.1"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
walkdir = "2.5.0"

[profile.dev]
opt-level = 0      # no optimizations—easier to step
debug = true       # include debug info
